change-skills-section

--- a/index.html
+++ b/index.html
@@ -438,106 +438,108 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>Photoshop</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-1"
-                  role="progressbar"
-                  aria-valuenow="90"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 90%"
-                >
-                  <span>90%</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>jQuery</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-2"
-                  role="progressbar"
-                  aria-valuenow="85"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 85%"
-                >
-                  <span>85%</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>HTML5</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-3"
-                  role="progressbar"
-                  aria-valuenow="95"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 95%"
-                >
-                  <span>95%</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>CSS3</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-4"
-                  role="progressbar"
-                  aria-valuenow="90"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 90%"
-                >
-                  <span>90%</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>WordPress</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-5"
-                  role="progressbar"
-                  aria-valuenow="70"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 70%"
-                >
-                  <span>70%</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 animate-box">
-            <div class="progress-wrap ftco-animate">
-              <h3>SEO</h3>
-              <div class="progress">
-                <div
-                  class="progress-bar color-6"
-                  role="progressbar"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  style="width: 80%"
-                >
-                  <span>80%</span>
-                </div>
-              </div>
+          <div class="col-md-12">
+            <div class="skills-grid">
+              <span class="skill-box ftco-animate"
+                ><i class="icon-check"></i> Quality Assurance</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-check"></i> Quality Control</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-cog"></i> Lean Six Sigma</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-layers"></i> TQM</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-check"></i> FMEA</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-file"></i> PPAP</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-settings"></i> QMS Development</span
+              >
+
+              <span class="skill-box ftco-animate"
+                ><i class="icon-shield"></i> ISO 9001</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-users"></i> Supplier Quality</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-clipboard"></i> ITP / PQP / NCR</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-check"></i> COPQ</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-search"></i> Pre-mass Production
+                Inspection</span
+              >
+
+              <span class="skill-box ftco-animate"
+                ><i class="icon-bar-chart"></i> Data Analysis</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-pie-chart"></i> Power BI</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-database"></i> SAP S/4HANA</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-check"></i> SPC</span
+              >
+
+              <span class="skill-box ftco-animate"
+                ><i class="icon-wrench"></i> AutoCAD</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-wrench"></i> SolidWorks</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-wrench"></i> Revit</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-wrench"></i> MATLAB</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-wrench"></i> ANSYS Fluent</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-wrench"></i> Minitab</span
+              >
+
+              <span class="skill-box ftco-animate"
+                ><i class="icon-home"></i> HVAC</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-fire"></i> Firefighting</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-check"></i> Plumbing Design</span
+              >
+
+              <span class="skill-box ftco-animate"
+                ><i class="icon-file"></i> Microsoft Excel (Advanced)</span
+              >
+
+              <span class="skill-box ftco-animate"
+                ><i class="icon-chat"></i> Communication</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-help"></i> Problem Solving</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-users"></i> Negotiation</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-timer"></i> Time Management</span
+              >
+              <span class="skill-box ftco-animate"
+                ><i class="icon-product-hunt"></i> Process Improvement</span
+              >
             </div>
           </div>
         </div>
